# jomama

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  start.sh  tsconfig.json
bot/: __init__.py  commands.py  config.py  constants.py  views.py
bot/database/: __init__.py  pool.py  queries.py
bot/services/: logging.py  rate_limit.py  ticket.py
bot/utils/: embeds.py  permissions.py  validators.py
prisma/: schema.prisma
src/: index.ts
src/commands/: config.ts  embed.ts  help.ts  index.ts  ping.ts  status.ts  ticket-panel.ts
src/components/: router.ts
src/components/handlers/: modalTicket.ts  ticketClose.ts  ticketCloseConfirm.ts  ticketEscalate.ts  ticketOpen.ts  ticketSelectType.ts
src/database/: client.ts  connect.ts  queries.ts
src/events/: guildMemberAdd.ts  index.ts  interactionCreate.ts  ready.ts
src/models/: Ticket.ts
src/scripts/: deploy-commands.ts
src/services/: logging.ts  rateLimit.ts  ticket.ts
src/utils/: constants.ts  embeds.ts  permissions.ts  validators.ts
